clusters/milkyway/apps/productivity/planka-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: planka
    app.kubernetes.io/name: planka
  name: planka
  namespace: productivity
spec:
  ingressClassName: public
  rules:
  - host: planka.milkyway.cboxlab.com
    http:
      paths:
      - backend:
          service:
            name: planka
            port:
              number: 1337
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - planka.milkyway.cboxlab.com
    secretName: planka-tls
